remove react-split-pane, better layout on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@ body {
   background-color: $background-color;
   color: $color;
   font-family: monospace;
-  overflow: hidden;
+  overflow-x: hidden;
 
   #header {
     text-align: center;
@@ -18,7 +18,9 @@ body {
   }
 
   a {
-    color: purple;
+    color: rgb(134, 45, 134);
+    text-decoration: none;
+    border-bottom: 1px solid gray;
   }
 
   pre {
@@ -26,6 +28,35 @@ body {
     font-size: 0.75em;
     padding: 5px;
   }
+
+  .links {
+    padding-bottom: 20px;
+    border-bottom: 1px solid gray;
+  }
+}
+
+#main {
+  display: flex;
+
+  @media (max-width: 900px) {
+    flex-direction: column;
+
+    textarea {
+      width: 100%;
+      border-bottom: 2px solid gray;
+      padding: 5px 2px;
+    }
+
+    #preview {
+      width: 100%;
+      padding: 5px 5px;
+    }
+  }
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 span {
@@ -43,16 +74,14 @@ span {
 textarea {
   background-color: $background-color;
   color: $color;
-  line-height: 2em;
+  line-height: 1.6em;
   font-size: 1.3em;
   border: none;
   margin-left: 5px;
-  min-height: 80vh;
-  width: 840px;
-  min-width: 290px;
-  max-width: 1390px;
+  min-height: 100vh;
+  width: 50%;
   resize: none;
-  scrollbar-width: none;
+  scrollbar-width: 1px;
 
   &:focus {
     outline: none;
@@ -63,65 +92,14 @@ textarea {
   color: $color;
   line-height: 1.6em;
   font-size: 1.2em;
-  max-height: 80vh;
+  width: 50%;
+  max-height: 100vh;
   overflow-y: scroll;
-  margin-right: 5px;
-  scrollbar-width: none;
+  overflow-x: hidden;
+  scrollbar-width: 1px;
 }
 
 #editor,
 #preview {
-  padding: 50px;
-}
-
-// react-split-pane
-.Resizer {
-  background: rgb(15, 0, 0);
-  opacity: 0.15;
-  z-index: 1;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding;
-  background-clip: padding-box;
-}
-
-.Resizer:hover {
-  -webkit-transition: all 2s ease;
-  transition: all 2s ease;
-}
-
-.Resizer.horizontal {
-  height: 11px;
-  margin: -5px 0;
-  border-top: 5px solid rgba(255, 255, 255, 0);
-  border-bottom: 5px solid rgba(255, 255, 255, 0);
-  cursor: row-resize;
-  width: 100%;
-}
-
-.Resizer.horizontal:hover {
-  border-top: 5px solid rgba(0, 0, 0, 0.5);
-  border-bottom: 5px solid rgba(0, 0, 0, 0.5);
-}
-
-.Resizer.vertical {
-  width: 11px;
-  margin: 20px -5px;
-  border-left: 5px solid rgba(255, 255, 255, 0);
-  border-right: 5px solid rgba(255, 255, 255, 0);
-  cursor: col-resize;
-  height: 100%;
-}
-
-.Resizer.vertical:hover {
-  border-left: 5px solid rgba(0, 0, 0, 0.5);
-  border-right: 5px solid rgba(0, 0, 0, 0.5);
-}
-.Resizer.disabled {
-  cursor: not-allowed;
-}
-.Resizer.disabled:hover {
-  border-color: transparent;
+  padding: 20px 50px;
 }
